--- a/src/apigility-ui/api-module/api-module.html
+++ b/src/apigility-ui/api-module/api-module.html
@@ -39,6 +39,21 @@
           </div>
         </form>
       </div>
+      <!--region PerfOps Update-->
+      <div class="col-sm-6">
+        <h3>Tag</h3>
+        <br/>
+        <form class="form-inline" role="form" unsaved-warning-form>
+          <div class="form-group">
+            <label class="control-label">Set tag for API</label>
+            <input class="form-control" ng-model="vm.module.tag" ng-disabled="vm.disabled" type="text"/>
+          </div>
+          <div class="form-group">
+            <button type="submit" class="btn btn-success btn-sm" ng-click="vm.setTag()" ladda="vm.loading" ng-hide="vm.disabled">Save</span></button>
+          </div>
+        </form>
+      </div>
+      <!--endregion-->
       <br clear="left"><br />
       <h3>REST</h3>
       <table class="table table-bordered col-sm-12">
