--- a/src/apigility-ui/api-module/api-module.html
+++ b/src/apigility-ui/api-module/api-module.html
@@ -53,6 +53,22 @@
           </div>
         </form>
       </div>
+      <div class="col-sm-6">
+        <h3>Visibility</h3>
+        <br/>
+        <form class="form-inline" role="form" unsaved-warning-form>
+          <div class="form-group">
+            <label class="control-label">Set visibility for API</label>
+            <select class="form-control" ng-model="vm.module.visibility" ng-disabled="vm.disabled">
+              <option value="public">Public</option>
+              <option value="private">Private</option>
+            </select>
+          </div>
+          <div class="form-group">
+            <button type="submit" class="btn btn-success btn-sm" ng-click="vm.setVisibility()" ladda="vm.loading" ng-hide="vm.disabled">Save</span></button>
+          </div>
+        </form>
+      </div>
       <!--endregion-->
       <br clear="left"><br />
       <h3>REST</h3>
