--- a/src/apigility-ui/api-module/api-module.html
+++ b/src/apigility-ui/api-module/api-module.html
@@ -60,7 +60,7 @@
           <div class="form-group">
             <label class="control-label">Set visibility for API</label>
             <select class="form-control" ng-model="vm.module.visibility" ng-disabled="vm.disabled">
-              <option value="public">Public</option>
+              <option value="public" selected="selected">Public</option>
               <option value="private">Private</option>
             </select>
           </div>
